--- a/web/index.html
+++ b/web/index.html
@@ -41,5 +41,6 @@
     }
   </script>
   <script src="main.dart.js" type="application/javascript"></script>
+  <script src="https://www.gstatic.com/firebasejs/8.4.1/firebase-firestore.js"></script>
 </body>
 </html>
