--- a/web/index.html
+++ b/web/index.html
@@ -40,7 +40,24 @@
       });
     }
   </script>
-  <script src="main.dart.js" type="application/javascript"></script>
+  <script src="https://www.gstatic.com/firebasejs/8.4.1/firebase-app.js"></script>
+  
   <script src="https://www.gstatic.com/firebasejs/8.4.1/firebase-firestore.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/8.4.1/firebase-database.js"></script>
+  <script>
+    var firebaseConfig = {
+      apiKey: "AIzaSyCgKLJ99bX1Dz03P0BDsgh2W6Iy-WaaH6M",
+      authDomain: "afekatonproject.firebaseapp.com",
+      databaseURL: "https://afekatonproject-default-rtdb.europe-west1.firebasedatabase.app",
+      projectId: "afekatonproject",
+      storageBucket: "afekatonproject.appspot.com",
+      messagingSenderId: "665954066792",
+      appId: "1:665954066792:web:7a582120d90e5ebb9b36dd"
+    };
+    firebase.initializeApp(firebaseConfig);
+    </script>
+  <!-- <script src="/__/firebase/init.js"></script> -->
+  
+  <script src="main.dart.js" type="application/javascript"></script>
 </body>
 </html>
